typescript/checker/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts.stderr
error: TS1345 {
    span: Span {
        lo: BytePos(
            351,
        ),
        hi: BytePos(
            359,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:19:11
   |
19 | var ra5 = a5 && a1;
   |           ^^^^^^^^

error: TS1345 {
    span: Span {
        lo: BytePos(
            562,
        ),
        hi: BytePos(
            570,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:30:11
   |
30 | var rb5 = a5 && a2;
   |           ^^^^^^^^

error: TS1345 {
    span: Span {
        lo: BytePos(
            773,
        ),
        hi: BytePos(
            781,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:41:11
   |
41 | var rc5 = a5 && a3;
   |           ^^^^^^^^

error: TS1345 {
    span: Span {
        lo: BytePos(
            984,
        ),
        hi: BytePos(
            992,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:52:11
   |
52 | var rd5 = a5 && a4;
   |           ^^^^^^^^

error: TS1345 {
    span: Span {
        lo: BytePos(
            1195,
        ),
        hi: BytePos(
            1203,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:63:11
   |
63 | var re5 = a5 && a5;
   |           ^^^^^^^^

error: TS1345 {
    span: Span {
        lo: BytePos(
            1406,
        ),
        hi: BytePos(
            1414,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:74:11
   |
74 | var rf5 = a5 && a6;
   |           ^^^^^^^^

error: TS1345 {
    span: Span {
        lo: BytePos(
            1617,
        ),
        hi: BytePos(
            1625,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:85:11
   |
85 | var rg5 = a5 && a7;
   |           ^^^^^^^^

error: TS1345 {
    span: Span {
        lo: BytePos(
            1828,
        ),
        hi: BytePos(
            1836,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:96:11
   |
96 | var rh5 = a5 && a8;
   |           ^^^^^^^^

error: TS1345 {
    span: Span {
        lo: BytePos(
            2047,
        ),
        hi: BytePos(
            2057,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:107:11
    |
107 | var ri5 = a5 && null;
    |           ^^^^^^^^^^

error: TS1345 {
    span: Span {
        lo: BytePos(
            2298,
        ),
        hi: BytePos(
            2313,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:118:11
    |
118 | var rj5 = a5 && undefined;
    |           ^^^^^^^^^^^^^^^

